# quill

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  RELEASE.md  ROADMAP.html  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.txt  TRADEMARKS.md  babel.cfg  dialogs.md  done.md  edit.md  fix.md  fun.md  generate_dectalk_previews.bat  golden.html  golden.md  issues.md  openai.md  phrase.txt  pyproject.toml  rel.html  rel.md  requirements.txt  run-from-source.bat  run-from-source.command  run-from-source.sh  setup_macos.py  verbosity.md  x2.md
.github/: CODEOWNERS  SUPPORT.md  copilot-instructions.md  labels.yml
.github/ISSUE_TEMPLATE/: config.yml  quillin_submission.yml
.github/PULL_REQUEST_TEMPLATE/: quillin_submission.md  translation.md
.github/instructions/: accessible-dialogs.instructions.md
.github/workflows/: _diag-macos.yml  accessibility-ci.yml  copilot-setup-steps.yml  docs-artifacts.yml  github-pages.yml  label-sync.yml  macos-release.yml  pr-ci.yml  quillin-verify.yml  security-ci.yml  uia-regression.yml  windows-release.yml
.history/: dialogs_20260602080619.md  dialogs_20260602094028.md  golden_20260602073048.md  golden_20260602075622.md  golden_20260602080032.md  golden_20260602080543.md  golden_20260602080554.md  golden_20260602080557.md  golden_20260602080607.md  golden_20260602081302.md  golden_20260602081822.md  golden_20260602081841.md  golden_20260602082036.md  golden_20260602082235.md  golden_20260602082242.md  golden_20260602082255.md  golden_20260602082303.md  golden_20260602082505.md  golden_20260602082518.md  golden_20260602082703.md  golden_20260602082711.md  golden_20260602083203.md  golden_20260602083212.md  golden_20260602083620.md  golden_20260602083625.md  golden_20260602083641.md  golden_20260602084435.md  golden_20260602084451.md
codex-notes/: README.epub  README.html
codex-notes/handoff/: codex-handoff.epub  codex-handoff.html  codex-handoff.md  publishing-providers-framework-phase1-slice-a.epub  publishing-providers-framework-phase1-slice-a.html  publishing-providers-framework-phase1-slice-a.md  publishing-providers-framework-restart-2026-06-19.epub  publishing-providers-framework-restart-2026-06-19.html  publishing-providers-framework-restart-2026-06-19.md
codex-notes/logs/: codex-review-log.epub  codex-review-log.html  codex-review-log.md  publishing-providers-framework-current-work-log-2026-06-19.epub  publishing-providers-framework-current-work-log-2026-06-19.html  publishing-providers-framework-current-work-log-2026-06-19.md  publishing-providers-framework-phase1-slice-a.epub  publishing-providers-framework-phase1-slice-a.html  publishing-providers-framework-phase1-slice-a.md
codex-notes/memory/: publishing-providers-framework-current-state-2026-06-19.epub  publishing-providers-framework-current-state-2026-06-19.html  publishing-providers-framework-current-state-2026-06-19.md  publishing-providers-framework-phase1-slice-a.epub  publishing-providers-framework-phase1-slice-a.html  publishing-providers-framework-phase1-slice-a.md  publishing-providers-framework-readiness.epub  publishing-providers-framework-readiness.html  publishing-providers-framework-readiness.md
codex-notes/notes/: bundled-publishing-provider-adapter-contract-2026-06-19.md  claude-code-restart-prompt-handling-2026-06-22.epub  claude-code-restart-prompt-handling-2026-06-22.html  claude-code-restart-prompt-handling-2026-06-22.md  main-branch-audit-note-2026-06-10.epub  main-branch-audit-note-2026-06-10.html  publishing-main-merge-readiness-note-2026-06-10.epub  publishing-main-merge-readiness-note-2026-06-10.html  publishing-providers-framework-compare-with-remote-closeout-2026-06-21.epub  publishing-providers-framework-compare-with-remote-closeout-2026-06-21.html  publishing-providers-framework-compare-with-remote-closeout-2026-06-21.md  publishing-providers-framework-current-status-2026-06-19.epub  publishing-providers-framework-current-status-2026-06-19.html  publishing-providers-framework-current-status-2026-06-19.md  publishing-providers-framework-phase-1-closeout-2026-06-20.epub  publishing-providers-framework-phase-1-closeout-2026-06-20.html  wordpress-provider-extraction-readiness-2026-06-19.epub  (+15 more)
docs/: CODE_OF_CONDUCT.epub  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.epub  CONTRIBUTING.html  CONTRIBUTING.md  CONTROL_REFERENCE.epub  CONTROL_REFERENCE.html  CONTROL_REFERENCE.md  GOVERNANCE.epub  GOVERNANCE.html  MAINTAINERS.epub  MAINTAINERS.html  MAINTAINERS.md  QUILL-PRD.epub  QUILL-PRD.html  QUILL-PRD.md  SECURITY.epub  SECURITY.html  SECURITY.md  announcement-beta.epub  announcement-beta.html  announcement-beta.md  announcement.epub  ask-quill-chat-setup.md  assistant-setup.md  braille.html  deployment.epub  deployment.html  deployment.md  keybinding-standard.epub  keybinding-standard.html  keybinding-standard.md  latex_testing.epub  latex_testing.md  math.epub  math.html  qdc-tutorial.epub  qdc-tutorial.html  qdc-tutorial.md  (+11 more)
installer/: README-installer.txt  quill.iss
quill/: __init__.py  __main__.py  branding.py  build_info.py
quill-ai-gateway/: .env.example  .gitignore  Caddyfile.example  Dockerfile  README.md  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
quill/native/table_uia/: CMakeLists.txt  README.md  _quill_table_uia.cp313-win_amd64.pyd  python_bridge.cpp  table_provider.cpp  table_provider.hpp
quillin-hub/: README.md  quill-pub.key  requirements.txt  run.py  smoke_test.py
scripts/: build_glow_wheels.py  build_macos.sh  build_portable_zip.py  build_table_uia.py  build_windows_distribution.py  check_docs_artifacts.py  companion_live_demo.py  extract_release_body.py  footprint_live.py  footprint_report.py  gen_ink_sounds.py  gen_voice_previews.py  generate_dectalk_previews.bat  generate_update_feed.py  manage_feature_locks.py  profile_startup.py  setup_macos.py  third_party_notices.py
tests/: conftest.py
tools/: generate_build_info.py  generate_feedback_token.py
(+2357 files in other folders)
