[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "quill"
dynamic = ["version"]
description = "Screen-reader-first writing and document environment for Windows and macOS"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Blind Information Technology Solutions (BITS)" },
  { name = "Community Access" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]
dependencies = [
    "regex>=2026.5.9",
    "defusedxml>=0.7.1",
    # Runtime deps of the vendored autoupdate library (quill/_vendor/autoupdate).
    "requests>=2.34.2",
    "platform_utils>=1.6.2",
    # Windows has no system IANA timezone database, so stdlib zoneinfo needs
    # this package to resolve real zone names (publishing schedule dialog).
    "tzdata>=2025.1",
]

[project.optional-dependencies]
ui = [
    "wxPython>=4.2.5",
    # Accessible wx.html2.WebView surfaces (chat, preview, dialogs) — extracted
    # from Quill and published so any wxPython app can reuse it.
    "wx-accessible-webview>=0.2.0",
    # Windows SAPI 5 text-to-speech (Read Aloud system voice + self-voicing
    # announcement fallback). Windows-only at runtime; harmless elsewhere.
    "comtypes>=1.4; sys_platform == 'win32'",
    # CA bundle for verified HTTPS update checks (macOS Python lacks trusted roots).
    "certifi>=2026.6.17",
    # Prism screen-reader speech bridge (Windows) — routes announcements to
    # NVDA/JAWS/Narrator instead of speaking over them.
    "prismatoid>=0.16.6; sys_platform == 'win32'",
    # Pillow: screen capture (PIL.ImageGrab) and clipboard image support.
    # Also a transitive dependency of pillow-heif on platforms where that installs.
    "Pillow>=12.2.0",
    # HEIC/HEIF image support for AI image description (iPhone default format).
    # Registers a PIL opener so HEIC files can be read and converted to JPEG
    # in memory before being sent to the vision API.
    "pillow-heif>=1.4.0",
    # HTML-to-text converter for intelligent paste cleaning (AccessibleApps, MIT).
    "html_to_text>=1.0.0",
]
spellcheck = ["pyenchant>=3.3.0"]
# Cross-platform earcon audio via BASS (Un4seen). Enables true mixing so multiple
# sounds can play simultaneously. Falls back to winsound (Windows) or silence without
# this extra. Confirm Un4seen commercial license terms before paid distribution.
audio = ["sound_lib>=0.83"]
# Edit files over SSH/SFTP (issue #139): browse a remote host, download to edit,
# upload on save with a tilde backup. paramiko handles password and OpenSSH-key
# auth; it is optional so the rest of Quill runs without it.
ssh = ["paramiko>=5.0.0"]
# On-device AI for the Ask Quill chat. Windows/Linux use llama.cpp (CPU, GGUF);
# a GGUF model (e.g. Phi-4-mini Q4) goes in <app data>/models or QUILL_LLAMA_MODEL.
ai = ["llama-cpp-python>=0.3.31"]
dictation = ["SpeechRecognition>=3.17.0"]
# Offline speech-to-text (#617). The whisper.cpp executable + GGML models are
# managed out-of-band (AI > Speech > Manage Speech Models); this optional extra
# adds microphone capture for offline dictate-at-cursor via PortAudio.
speech = ["sounddevice>=0.4"]
# Optional higher-throughput offline speech engine (#617 S4). Faster Whisper is
# a CTranslate2-based library that uses the GPU when available; huggingface_hub
# fetches its CTranslate2 model repositories. Users opt in via AI > Speech >
# Manage Speech Models > Speech Engine; the bundled whisper.cpp engine remains
# the default and needs none of this.
fasterwhisper = ["faster-whisper>=1.0", "huggingface_hub>=0.20"]
# Optional very-low-resource offline English engine: Vosk (Kaldi) (#669). Tiny
# CPU-only models (~40 MB) for old/constrained machines. Models download from
# alphacephei.com via Manage Speech Models; no GPU needed.
vosk = ["vosk>=0.3.45"]
# MP3 chapter markers for batch document-to-speech (§4.8): mutagen writes the
# ID3v2.3 CHAP/CTOC frames. Imported lazily in quill/core/speech/chapters.py.
mp3 = ["mutagen>=1.47"]
# Premium cloud TTS via the official ElevenLabs SDK (roadmap §4.1, audio export).
# Optional: the ElevenLabs AI Voice provider is inert unless this is installed and
# an "ElevenLabs API key" credential is configured. All calls go through the
# host-owned gateway quill/core/ai/elevenlabs_tts.py (the only importer of the SDK).
elevenlabs = ["elevenlabs>=1.0.0"]
# Native Windows OCR (OCR-1): a thin pip wheel projecting the Windows.Media.Ocr
# WinRT APIs that ship inside Windows 10/11. The OCR engine itself is a built-in
# OS component, so end users install nothing extra — bundling this wheel makes
# the zero-install Windows backend available; Tesseract (OCR-2) stays a separate
# opt-in install for users who choose it.
ocr = ["winsdk>=1.0.0b10; sys_platform == 'win32'"]
# Kokoro neural TTS (offline, no GPU/torch required). kokoro-onnx runs the Kokoro
# voice model through onnxruntime (CPU). Voice model files (~114 MB) are downloaded
# on first use via Voice Picker > Download Kokoro and stored in the app data dir.
# phonemizer-fork and espeakng-loader (transitive deps of kokoro-onnx) are
# self-contained — they bundle eSpeak-NG phoneme data and do not require a system install.
# soundfile writes the synthesized PCM to WAV; it bundles libsndfile on Windows.
kokoro = [
    "kokoro-onnx>=0.5.0",
    "soundfile>=0.14.0",
]
pages = ["keynote-parser>=1.14.4.0", "markitdown[docx,pptx,xlsx,xls,pdf]>=0.1.6"]
# GLOW document accessibility engine (audit / fix / convert for docx, pptx,
# xlsx, pdf, epub, md). quill-glow-core is the thin, stable service contract
# Quill imports; its [glow] extra pulls in the acb-large-print backend. The
# dependency is named — never a drive path — so it resolves the same from any
# checkout root on any machine. Until these are published to an index, install
# the vendored, drive-independent pure-Python wheels with a repo-relative path:
#   pip install --find-links vendor/wheels "quill-glow-core[glow]"
glow = ["quill-glow-core[glow]>=0.1.1"]
# macOS build + runtime. py2app 0.28.x is incompatible with setuptools >= 83
# (the build aborts with "install_requires is no longer supported"), so pin it.
# pyobjc powers the macOS platform layer; apple-fm-sdk is the Foundation Models
# backend used by Ask Quill on macOS.
macos = [
    "py2app>=0.28.10",
    "setuptools<83",
    "pyobjc>=12.2.1; sys_platform == 'darwin'",
    "apple-fm-sdk>=0.2.0; sys_platform == 'darwin'",
]
github = [
    # GitHub repository browser and remote file open/save (File > Open Remote > GitHub).
    "PyGithub>=2.9.1",
]
# Optional agentic-AI harness packs (QUILL 2.0). Each pulls one third-party agent
# SDK; the matching quill/ai_packs/ module imports it LAZILY only when a session
# runs, and an uninstalled pack reports "Install the X pack" without crashing.
# Every pack bridges to the same Safe Editor Tool Gateway + Permission Broker and
# emits the same normalized events; none edits the buffer directly. Pin loosely;
# adapters are version-checked and the Native harness always works.
ai-copilot = ["copilot"]  # TODO: pin to the official GitHub Copilot SDK package name once published
ai-claude = ["claude-agent-sdk>=0.1.0"]
ai-openai = ["openai-agents>=0.1.0"]
ai-microsoft = ["agent-framework>=0.1.0"]
ai-langgraph = ["langgraph>=0.2.0", "langchain>=0.3.0"]
ai-openhands = ["openhands-ai>=0.1.0"]
dev = [
  "pytest>=9.1.1",
  "pytest-xdist>=3.8.0",
  "pytest-timeout>=2.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.18",
  "mypy>=2.1.0",
  # I18N: string extraction, .po update, .mo compile
  "Babel>=2.18.0",
]

[project.scripts]
quill = "quill.__main__:main"

[tool.hatch.version]
# quill/__init__.py is the authoritative version source.
# pyproject.toml, the installer, and all tooling derive from it.
path = "quill/__init__.py"

[tool.hatch.metadata]
# Allow direct URL references in optional-dependencies. Quill is an app, not a
# PyPI-published library, so direct references are fine — and hatchling refuses
# to build metadata without this, which broke `pip install -e .` in CI.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["quill"]

[tool.hatch.build.targets.wheel.force-include]
"quill/data/words_alpha.txt" = "quill/data/words_alpha.txt"
"quill/data/words_alpha.LICENSE.txt" = "quill/data/words_alpha.LICENSE.txt"
"quill/data/th_en_US_v2.dat" = "quill/data/th_en_US_v2.dat"
"quill/data/th_en_US_LICENSE.txt" = "quill/data/th_en_US_LICENSE.txt"
"quill/data/th_en_US_WordNet_LICENSE.txt" = "quill/data/th_en_US_WordNet_LICENSE.txt"
"quill/core/schemas/extension.json" = "quill/core/schemas/extension.json"
"quill/core/schemas/sound_pack.json" = "quill/core/schemas/sound_pack.json"
"quill/assets/sound_packs" = "quill/assets/sound_packs"
"quill/assets/audio" = "quill/assets/audio"
"quill/quillins_bundled" = "quill/quillins_bundled"
# I18N: ship the gettext template and any compiled translation catalogs so the
# display-language switcher can find them in installed builds.
"quill/locale" = "quill/locale"

[tool.pytest.ini_options]
# Pin pythonpath so the worktree's `quill` package wins over the parent
# checkout's `quill` package when both pyproject.toml files are visible
# to pytest (e.g. when running from inside .claude/worktrees/quill-0.7.0).
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
timeout = 30
log_cli = true
log_level = "INFO"
markers = [
    "perf: wall-clock performance budgets; run with RUN_PERF=1 or exclude with -m 'not perf'",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Vendored, generated, and distribution trees are not first-party source and
# must not be linted or format-checked.
extend-exclude = [
    "build",
    "windows-distribution",
    "installer-smoke",
    "installer-smoke-2",
    "release-dist-0.1-final",
    "release-dist-0.1-r2",
    "kokoro",
    "tmp",
    # Untracked local scratch dir of third-party sample scripts; not first-party.
    "Code Samples to Innovate With",
    # Local scratch under docs/planning/source (e.g. the gitignored Table Studio /
    # CSV prototype in source/test). The ACB audio-pipeline reference that once
    # lived here was retired once its learnings shipped (roadmap §5, §7). Not
    # first-party; excluded from lint/format.
    "docs/planning/source",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_windows_distribution.py" = ["E501"]
"scripts/local_ai_editing_proof.py" = ["E501"]
"tests/unit/core/ai/test_foundation_models.py" = ["E402", "E501"]
# This test asserts the exact long Inno Setup script lines emitted by
# scripts/build_windows_distribution.py (which itself carries the same E501
# ignore); wrapping the literal installer directives would obscure the match.
"tests/unit/scripts/test_build_windows_distribution.py" = ["E501"]
# py2app requires patching finalize_options before importing the platform
# shell-integration module, so that import is deliberately late.
"scripts/setup_macos.py" = ["E402"]
# macOS-only platform tests import the module under test after a
# sys.platform skip guard, so the import is deliberately not at the top.
"tests/unit/platform/macos/test_high_contrast.py" = ["E402"]
"tests/unit/platform/macos/test_keychain.py" = ["E402"]
"tests/unit/platform/macos/test_sr_detect.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
exclude = ["quill/ui/"]

# Third-party modules without type stubs or a py.typed marker. Quill treats
# these as untyped at the import boundary so the scoped strict gate
# (mypy quill/core quill/io, see CONTRIBUTING) stays green without weakening
# typing in our own code.
[[tool.mypy.overrides]]
module = [
    "defusedxml.*",
    "regex",
    "enchant",
    "keynote_parser.*",
    "faster_whisper",
    "ctranslate2",
    # Optional kokoro read-aloud fallback (quill[kokoro]) imports torch lazily in
    # read_aloud.py; heavy and not in the dev extra, so the scoped gate must not
    # depend on it.
    "torch",
    # Optional Vosk engine (quill[vosk]); imported lazily in providers/vosk.py.
    "vosk",
    # Optional ElevenLabs SDK (quill[elevenlabs]); imported lazily only in the
    # host-owned gateway quill/core/ai/elevenlabs_tts.py (roadmap §4.1).
    "elevenlabs",
    "elevenlabs.*",
    # Optional MP3 chapter markers (quill[mp3]); imported lazily in speech/chapters.py.
    "mutagen",
    "mutagen.*",
    "huggingface_hub",
    "sounddevice",
    "kokoro",
    "openpyxl",
    # Optional runtime dependencies that are not installed in the scoped-typing
    # CI job (which installs only .[dev]); the gate should measure our code, not
    # whether an optional extra happens to be present.
    "markitdown",
    "certifi",
    "pdfplumber",
    "comtypes",
    "comtypes.client",
    # Optional GLOW shared-core engine, pulled in only by the `glow` extra.
    # core/glow.py imports it behind a guarded try/except; the scoped strict
    # gate must not depend on the extra being installed.
    "quill_glow_core",
    "quill_glow_core.*",
    # Optional GitHub integration (quill[github]); imported lazily in github_provider.py.
    "github",
    "github.*",
    # Optional HEIC/HEIF support; imported lazily in core/ai/vision.py behind
    # a try/except so the strict gate passes without the [ui] extra installed.
    "pillow_heif",
    # PIL/Pillow: used by screen_capture (platform layer) and vision.py HEIC
    # conversion. Pillow ships py.typed but is not in the dev extra, so mark
    # it untyped here to keep the scoped gate clean.
    "PIL",
    "PIL.*",
    # Optional crash-reporting integration; imported lazily in
    # core/issue_submit.py behind a try/except. Not in the dev extra.
    "feedback_hub",
]
ignore_missing_imports = true
